Corrected Issue with overflow not updatnig on flow history and  with flow name not populating properly

--- a/sams-client-monitor-popup/stylesheets/stylesheet.css
+++ b/sams-client-monitor-popup/stylesheets/stylesheet.css
@@ -151,7 +151,8 @@ table tr, td {
     margin-right: auto;
     text-align: center;
     width: 70%;
-    max-height: 335px;    
+    max-height: 335px;
+    overflow-y: auto;
 }
 
 table#flowHistoryTable td {
